# ffplayer

./: .gitignore  CMakeLists.txt
cmake/: sourceGroupByFolder.cmake
cmake/Modules/: FindFFMPEG.cmake
src/: AudioParams.h  Buffer.cpp  Buffer.h  Clock.cpp  Clock.h  Decoder.cpp  Decoder.h  Definitions.h  FFMPEGUtil.cpp  FFMPEGUtil.h  Frame.cpp  Frame.h  FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  SDLUtil.cpp  SDLUtil.h  VideoState.cpp  VideoState.h  main.cpp
src_orig/: config.h  main.cpp
